--- a/src/app/modules/classes/classboard/classboard.component.html
+++ b/src/app/modules/classes/classboard/classboard.component.html
@@ -32,7 +32,7 @@
                 </mat-tab>
                 <mat-tab>
                     <ng-template mat-tab-label>
-                        <mat-icon>info</mat-icon> Master
+                        <mat-icon>info</mat-icon> Class Master
                     </ng-template>
                     <app-classmasterdashboard></app-classmasterdashboard>
                 </mat-tab>
