--- a/src/app/modules/generalreport/generalreportboard/generalreportboard.component.html
+++ b/src/app/modules/generalreport/generalreportboard/generalreportboard.component.html
@@ -12,6 +12,14 @@
                 </ng-template>
                 <app-getreport></app-getreport>
             </mat-tab>
+            <mat-tab>
+                <ng-template mat-tab-label>
+                    <mat-icon>change_history
+                    </mat-icon> Excel Upload
+                </ng-template>
+                <app-excel-data-management></app-excel-data-management>
+            </mat-tab>
+            
         </mat-tab-group>
 
     </mat-card-content>
