--- a/src/app/modules/schooltimetable/schooltimetable/schooltimetable.component.html
+++ b/src/app/modules/schooltimetable/schooltimetable/schooltimetable.component.html
@@ -39,7 +39,7 @@
                         <div *ngIf="SchoolTimeTableList.length>0" fxLayoutAlign="center center">
                             <button *ngIf="disCol=='Action'" [disabled]="loading || PagePermission=='read'"
                                 matTooltip="save all" mat-mini-fab (click)="SaveAll()">
-                                <mat-icon>save</mat-icon>
+                                <mat-icon>all_out</mat-icon>
                             </button>
                         </div>
                     </mat-header-cell>
