--- a/src/app/modules/studentexam/examslot/examslot.component.html
+++ b/src/app/modules/studentexam/examslot/examslot.component.html
@@ -33,13 +33,7 @@
                 <ng-container matColumnDef="ExamDate">
                     <mat-header-cell *matHeaderCellDef> Exam Date </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element.ExamDate|date:'dd-MM-yyyy'}} - {{element.WeekDay}} 
-                        <!-- <mat-form-field appearance="legacy" [style.width.px]="200">
-                            <input [(ngModel)]="element.ExamDate" [value]="element.ExamDate" matInput
-                                [matDatepicker]="ExamDate" autocomplete="off">
-                            <mat-datepicker-toggle matSuffix [for]="ExamDate"></mat-datepicker-toggle>
-                            <mat-datepicker #ExamDate></mat-datepicker>
-                        </mat-form-field> -->
+                        {{element.ExamDate|date:'dd-MM-yyyy'}} - {{element.WeekDay}}   
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="SlotName">
@@ -47,24 +41,17 @@
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
                         {{element.SlotName}}
-                        <!-- <mat-form-field [style.width.px]="150">
-                            <mat-select [value]="element.SlotNameId" [(ngModel)]="element.SlotNameId">
-                                <mat-option *ngFor="let item of SlotNames" [value]="item.MasterDataId">
-                                    {{item.MasterDataName}}
-                                </mat-option>
-                            </mat-select>
-                        </mat-form-field> -->
                     </mat-cell>
-                </ng-container>
-                
+                </ng-container>                
                 <ng-container matColumnDef="StartTime">
                     <mat-header-cell *matHeaderCellDef> Start Time </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-form-field appearance="legacy" [style.width.px]="200">
                             <mat-label>Start Time</mat-label>
-                            <input [value]="element.StartTime" [(ngModel)]="element.StartTime" matInput
+                            <input [value]="element.StartTime" 
+                            (blur)="onBlur(element)"
+                            [(ngModel)]="element.StartTime" matInput
                                 autocomplete="off">
-
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
@@ -73,9 +60,10 @@
                     <mat-cell *matCellDef="let element">
                         <mat-form-field appearance="legacy" [style.width.px]="200">
                             <mat-label>End Time</mat-label>
-                            <input [value]="element.EndTime" [(ngModel)]="element.EndTime" matInput
-                               autocomplete="off">
-                            
+                            <input [value]="element.EndTime"
+                            (blur)="onBlur(element)"
+                            [(ngModel)]="element.EndTime" matInput
+                               autocomplete="off">                            
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
@@ -89,12 +77,12 @@
                 </ng-container>
                 <ng-container matColumnDef="Action">
                     <mat-header-cell *matHeaderCellDef>
-                        <!-- <button [disabled]="loading" matTooltip="add new" mat-mini-fab (click)="addnew()">
-                            <mat-icon>add</mat-icon>
-                        </button> -->
+                        <button [disabled]="loading" matTooltip="save all" mat-mini-fab (click)="SaveAll()">
+                            <mat-icon>all_out</mat-icon>
+                        </button>
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                        <button [disabled]="loading" matTooltip="view/edit" mat-mini-fab (click)="UpdateOrSave(element)">
+                        <button [disabled]="loading || !element.Action" matTooltip="view/edit" mat-mini-fab (click)="Save(element)">
                             <mat-icon>save</mat-icon>
                         </button>
                     </mat-cell>
