--- a/src/app/modules/studentexam/slotnclasssubject/slotnclasssubject.component.html
+++ b/src/app/modules/studentexam/slotnclasssubject/slotnclasssubject.component.html
@@ -7,7 +7,7 @@
     <div style="padding: 15px;" fxLayout="row wrap">
         <div style="width: 100%;">
             <form [formGroup]="searchForm">
-                <mat-form-field [style.width.pc]="30">
+                <mat-form-field [style.width.pc]="30" appearance="outline">
                     <mat-label>Exam Slot</mat-label>
                     <mat-select formControlName="searchSlotId">
                         <mat-option *ngFor="let item of ExamSlots" [value]="item.SlotId">
@@ -18,7 +18,6 @@
                 <mat-form-field appearance="outline" [style.width.pc]="20">
                     <mat-label>Class</mat-label>
                     <mat-select formControlName="searchClassId" multiple>
-                        <!-- <mat-option [value]="0">--class--</mat-option> -->
                         <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
                             {{item.ClassName}}
                         </mat-option>
@@ -36,9 +35,6 @@
                 <button [disabled]="loading" class="mat-raised-button" (click)="GetSlotNClassSubjects()">
                     <mat-icon>search</mat-icon>
                 </button>
-                <!-- <button [disabled]="loading" matTooltip="clear all" class="mat-raised-button" (click)="clear()">
-                    <mat-icon>clear_all</mat-icon>
-                </button> -->
             </form>
             <p>Record will be displayed if it is defined in class subject module.</p>
             <mat-table #table [dataSource]="dataSource">
@@ -69,12 +65,14 @@
                 </ng-container>
                 <ng-container matColumnDef="Action">
                     <mat-header-cell *matHeaderCellDef>
-                        <!-- <button [disabled]="loading" *ngIf="SlotNClassSubjects.length>0" matTooltip="save all" mat-mini-fab (click)="saveall()">
+                        <button [disabled]="loading" *ngIf="SlotNClassSubjects.length>0" 
+                            matTooltip="save all" mat-mini-fab (click)="SaveAll()">
                             <mat-icon>all_out</mat-icon>
-                        </button> -->
+                        </button>
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                        <button [disabled]="loading" matTooltip="save" mat-mini-fab (click)="UpdateOrSave(element)">
+                        <button [disabled]="loading || !element.Action" matTooltip="save" 
+                        mat-mini-fab (click)="Save(element)">
                             <mat-icon>save</mat-icon>
                         </button>
                     </mat-cell>
