--- a/src/app/modules/ClassSubject/subject-types/subject-types.component.html
+++ b/src/app/modules/ClassSubject/subject-types/subject-types.component.html
@@ -10,7 +10,7 @@
                 </mat-header-cell>
                 <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
                     <mat-form-field [style.width.px]="150">
-                        <input matInput [value]="element.SubjectTypeName" [(ngModel)]="element.SubjectTypeName">
+                        <input matInput (blur)="onBlur(element)" [value]="element.SubjectTypeName" [(ngModel)]="element.SubjectTypeName">
                     </mat-form-field>
                 </mat-cell>
             </ng-container>
@@ -18,7 +18,7 @@
                 <mat-header-cell *matHeaderCellDef> No. Of Subject to Select </mat-header-cell>
                 <mat-cell *matCellDef="let element">
                     <mat-form-field [style.width.px]="150">
-                        <input matInput [value]="element.SelectHowMany" [(ngModel)]="element.SelectHowMany">
+                        <input matInput (blur)="onBlur(element)" [value]="element.SelectHowMany" [(ngModel)]="element.SelectHowMany">
                     </mat-form-field>
                 </mat-cell>
             </ng-container>
