--- a/src/app/modules/studentexam/examstudentsubjectresult/examstudentsubjectresult.component.html
+++ b/src/app/modules/studentexam/examstudentsubjectresult/examstudentsubjectresult.component.html
@@ -18,18 +18,18 @@
                 <mat-form-field appearance="outline">
                     <mat-label>Class</mat-label>
                     <mat-select formControlName="searchClassId">
-                        <mat-option *ngFor="let item of Classes" [value]="item.MasterDataId">
-                            {{item.MasterDataName}}
+                        <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
+                            {{item.ClassName}}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
                 <mat-form-field appearance="outline">
                     <mat-label>Section</mat-label>
                     <mat-select formControlName="searchSectionId">
-                    <mat-option *ngFor="let item of Sections" [value]="item.MasterDataId">
-                        {{item.MasterDataName}}
-                    </mat-option>
-                </mat-select>  
+                        <mat-option *ngFor="let item of Sections" [value]="item.MasterDataId">
+                            {{item.MasterDataName}}
+                        </mat-option>
+                    </mat-select>
                 </mat-form-field>
                 <mat-form-field appearance="outline">
                     <mat-label>Subject</mat-label>
@@ -45,32 +45,32 @@
                 <!-- <button [disabled]="loading" matTooltip="clear all" class="mat-raised-button" (click)="clear()">
                     <mat-icon>clear_all</mat-icon>
                 </button> -->
-            </form>            
+            </form>
 
-            <mat-table #table [dataSource]="dataSource">                
-            
+            <mat-table #table [dataSource]="dataSource">
                 <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
                     <mat-header-cell *matHeaderCellDef>{{disCol!='Action'?disCol:''}}
                         <div *ngIf="ExamStudentSubjectResult.length>0" fxLayoutAlign="center center">
-                        <button *ngIf="disCol=='Action'" [disabled]="loading || PagePermission=='read'"
-                            matTooltip="save all" mat-mini-fab (click)="UpdateAll()">
-                            <mat-icon>save</mat-icon>
-                        </button>
-                    </div>
+                            <button *ngIf="disCol=='Action'" [disabled]="loading || PagePermission=='read'"
+                                matTooltip="save all" mat-mini-fab (click)="UpdateAll()">
+                                <mat-icon>all_out</mat-icon>
+                            </button>
+                        </div>
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element ">
                         <mat-form-field *ngIf="disCol !='StudentClassSubject' && disCol !='Action'">
-                            <input matInput (blur)="onBlur(element,$event)" [attr.name]="disCol" [value]="element[disCol]" [(ngModel)]="element[disCol]">
+                            <input matInput (blur)="onBlur(element,$event)" [attr.name]="disCol"
+                                [value]="element[disCol]" [(ngModel)]="element[disCol]">
                         </mat-form-field>
-                        
-                        <button *ngIf="disCol=='Action'" [disabled]="loading || PagePermission=='read'"
-                            matTooltip="save" mat-mini-fab (click)="SaveRow(element)">
+                        <button *ngIf="disCol=='Action'"
+                            [disabled]="loading || PagePermission=='read' || !element.Action" matTooltip="save"
+                            mat-mini-fab (click)="SaveRow(element)">
                             <mat-icon>save</mat-icon>
                         </button>
                         {{disCol=='StudentClassSubject'?element[disCol]:''}}
                     </mat-cell>
                 </ng-container>
-          <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                 <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
             </mat-table>
         </div>
