--- a/src/app/modules/studentexam/studentactivity/studentactivity.component.html
+++ b/src/app/modules/studentexam/studentactivity/studentactivity.component.html
@@ -15,12 +15,10 @@
                             {{option.Name}}
                         </mat-option>
                     </mat-autocomplete>
-                </mat-form-field>        
-                                 
+                </mat-form-field>      
                 <button [disabled]="loading" class="mat-raised-button" (click)="GetStudentActivity()">
                     <mat-icon>search</mat-icon>
-                </button>
-                
+                </button>                
             </form>
             <mat-table #table [dataSource]="dataSource">
                 <ng-container matColumnDef="Student">
@@ -34,7 +32,7 @@
                     <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Activity
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
-                           <mat-form-field>
+                           <mat-form-field [style.width.px]="200">
                                <textarea matInput [value]="element.Activity"  [(ngModel)]="element.Activity"></textarea>
                            </mat-form-field>
                     </mat-cell>
