--- a/src/app/modules/student/addstudent/addstudent.component.html
+++ b/src/app/modules/student/addstudent/addstudent.component.html
@@ -3,7 +3,8 @@
     <mat-card-subtitle>{{StudentName}}</mat-card-subtitle>
     <mat-card-content>
         <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
-        <div style="margin:5px">
+        <alert></alert>
+        <div style="margin:5px">            
             <form [formGroup]="studentForm">
                 <mat-tab-group #changeEvent [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChanged($event)"
                     class="demo-tab-group">
@@ -17,7 +18,8 @@
                                 <mat-grid-tile [colspan]="1" [rowspan]="1">
                                     <mat-form-field appearance="outline" fxFlex>
                                         <mat-label>Name</mat-label>
-                                        <input formControlName="FirstName" autocomplete="Off" #input matInput [maxlength]="50">
+                                        <input formControlName="FirstName" autocomplete="Off" #input matInput
+                                            [maxlength]="50">
                                         <span class="text-danger"
                                             *ngIf="f.FirstName.touched && f.FirstName.hasError('required')">First Name
                                             is required.</span>
@@ -26,31 +28,31 @@
                                 <mat-grid-tile [colspan]="1" [rowspan]="1">
                                     <mat-form-field appearance="outline" fxFlex>
                                         <mat-label>Last Name</mat-label>
-                                        <input formControlName="LastName" autocomplete="Off" #input matInput [maxlength]="50">                                        
+                                        <input formControlName="LastName" autocomplete="Off" #input matInput
+                                            [maxlength]="50">
                                     </mat-form-field>
-                                </mat-grid-tile>                                
+                                </mat-grid-tile>
                                 <mat-grid-tile [colspan]="1" [rowspan]="2">
-                                    <div *ngIf="Id>0" fxLayout="row" fxLayoutAlign="space-between center">
+                                    <div *ngIf="StudentId>0" fxLayout="column" fxLayoutAlign="space-between center">
                                         <span style="color:red;" *ngIf="message">{{message}}</span>
-                                        <input #inputfile [hidden]="true" type="file" accept='image/*'
-                                            (change)="preview(inputfile.files)" />
-                                        <img [src]="imgURL" height="200" *ngIf="imgURL">
-                                        <span *ngIf="!Edit">
-                                            <button [disabled]="loading" class="mat-raised-button" matTooltip="edit" color="primary"
-                                                (click)="edit()">
-                                                <mat-icon>edit</mat-icon>
-                                            </button>
-                                        </span>
-                                        <span *ngIf="Edit" fxLayout="column" fxLayoutAlign="center center">
-                                            <button [disabled]="loading" class="mat-raised-button" matTooltip="select file" color="primary"
-                                                (click)="inputfile.click()">
-                                                <mat-icon aria-label="photo">photo</mat-icon>
-                                            </button>&nbsp;&nbsp;
-                                            <button [disabled]="loading" type="submit" (click)="uploadFile()" matTooltip="upload file"
-                                                class="mat-raised-button">
-                                                <mat-icon aria-label="file_upload">file_upload</mat-icon>
-                                            </button>&nbsp;&nbsp;
-                                        </span>
+                                        <div style="padding-bottom: 15px;">
+                                            <input #inputfile [hidden]="true" type="file" accept='image/*'
+                                                (change)="preview(inputfile.files)" />
+                                            <img [src]="imgURL" height="160" *ngIf="imgURL">
+                                        </div>
+                                        <div fxLayout="row" fxLayoutAlign="space-between center">
+                                            <span>
+                                                <button [disabled]="loading" class="mat-raised-button"
+                                                    matTooltip="select file" color="primary"
+                                                    (click)="inputfile.click()">
+                                                    <mat-icon aria-label="photo">photo</mat-icon>
+                                                </button>&nbsp;&nbsp;
+                                                <button [disabled]="loading" type="submit" (click)="uploadFile()"
+                                                    matTooltip="upload file" class="mat-raised-button">
+                                                    <mat-icon aria-label="file_upload">file_upload</mat-icon>
+                                                </button>&nbsp;&nbsp;
+                                            </span>
+                                        </div>
                                     </div>
                                 </mat-grid-tile>
                                 <mat-grid-tile [colspan]="1" [rowspan]="1">
@@ -77,7 +79,8 @@
                                 <mat-grid-tile [colspan]="1" [rowspan]="1">
                                     <mat-form-field appearance="outline" fxFlex>
                                         <mat-label>Mother's name</mat-label>
-                                        <input formControlName="MotherName" autocomplete="Off" matInput [maxlength]="50">
+                                        <input formControlName="MotherName" autocomplete="Off" matInput
+                                            [maxlength]="50">
                                         <span class="text-danger"
                                             *ngIf="f.MotherName.touched && f.MotherName.hasError('required')">Mother's
                                             name
@@ -158,7 +161,8 @@
                                 class="mat-raised-button">
                                 <mat-icon>navigate_before</mat-icon>
                             </button>
-                            <button [disabled]="loading" *ngIf="selectedIndex<4" (click)="nextStep()" alt="save" class="mat-raised-button">
+                            <button [disabled]="loading" *ngIf="selectedIndex<4" (click)="nextStep()" alt="save"
+                                class="mat-raised-button">
                                 <mat-icon>navigate_next</mat-icon>
                             </button>
                         </mat-card-actions>
@@ -172,7 +176,8 @@
                         <div class="content" fxLayout="row wrap" fxLayoutGap="100px">
                             <mat-form-field appearance="outline">
                                 <mat-label>Student's Contact no.</mat-label>
-                                <input formControlName="ContactNo" autocomplete="Off" #Pincode matInput [maxlength]="10">
+                                <input formControlName="ContactNo" autocomplete="Off" #Pincode matInput
+                                    [maxlength]="10">
                             </mat-form-field>
                             <mat-form-field appearance="outline">
                                 <mat-label>WhatsApp No.</mat-label>
@@ -251,7 +256,8 @@
                                 class="mat-raised-button">
                                 <mat-icon>navigate_before</mat-icon>
                             </button>
-                            <button [disabled]="loading" *ngIf="selectedIndex<4" (click)="nextStep()" alt="save" class="mat-raised-button">
+                            <button [disabled]="loading" *ngIf="selectedIndex<4" (click)="nextStep()" alt="save"
+                                class="mat-raised-button">
                                 <mat-icon>navigate_next</mat-icon>
                             </button>
                         </mat-card-actions>
@@ -282,11 +288,12 @@
                                 class="mat-raised-button">
                                 <mat-icon>navigate_before</mat-icon>
                             </button>
-                            <button [disabled]="loading" *ngIf="selectedIndex<4" (click)="nextStep()" alt="save" class="mat-raised-button">
+                            <button [disabled]="loading" *ngIf="selectedIndex<4" (click)="nextStep()" alt="save"
+                                class="mat-raised-button">
                                 <mat-icon>navigate_next</mat-icon>
                             </button>
                         </mat-card-actions>
-                    </mat-tab>                    
+                    </mat-tab>
                     <mat-tab>
                         <ng-template mat-tab-label>
                             <mat-icon>note_add</mat-icon>Additional info.
@@ -351,8 +358,8 @@
                                 <mat-icon>arrow_back</mat-icon>
                             </button>
                         </mat-card-actions>
-                    </mat-tab>                    
-                    <mat-tab *ngIf="Id>0">
+                    </mat-tab>
+                    <mat-tab *ngIf="StudentId>0">
                         <ng-template mat-tab-label>
                             <mat-icon>class</mat-icon>Class
                         </ng-template>
