--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -5,7 +5,7 @@
             <!-- <button [disabled]="loading" mat-button (click)="toggleSideBar()">
                 <mat-icon>menu</mat-icon>
             </button> -->
-            <a [routerLink]="['/home/display/0/0/']"><img style="border-radius: 3px;" src="assets/images/ttplogo1.png"
+            <a [routerLink]="['/']"><img style="border-radius: 3px;" src="assets/images/ttplogo1.png"
                     alt="St Paul's Institute" width="50px" /></a>
             <span>{{SelectedApplicationName}}</span>    
                 </div>
