--- a/src/app/modules/control/add-master-data/add-master-data.component.html
+++ b/src/app/modules/control/add-master-data/add-master-data.component.html
@@ -1,119 +1,115 @@
 <div fxLayout="column" fxLayoutAlign="center space-between">
     <div>
-        <!-- <mat-card class="boxes">
-            <mat-card-title>Essential Data</mat-card-title>
-            <mat-card-content> -->
-                <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
-                <alert></alert>
-                <br>
-                <form [formGroup]="searchForm">
-                    <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="30px">
-                        <mat-form-field fxFlex appearance="outline">
-                            <mat-label>Application</mat-label>
-                            <mat-select formControlName="AppId" fxFlex (selectionChange)="enable($event)">
-                                <mat-option *ngFor="let app of PermittedApplications" [value]="app.applicationId">
-                                    {{app.applicationName}}
-                                </mat-option>
-                            </mat-select>
+        <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
+        <alert></alert>
+        <br>
+        <form [formGroup]="searchForm">
+            <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="30px">
+                <mat-form-field fxFlex appearance="outline">
+                    <mat-label>Application</mat-label>
+                    <mat-select formControlName="AppId" fxFlex (selectionChange)="FilterMaster($event)">
+                        <mat-option *ngFor="let app of PermittedApplications" [value]="app.applicationId">
+                            {{app.applicationName}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field fxFlex appearance="outline">
+                    <mat-label>Master Name</mat-label>
+                    <mat-select formControlName="ParentId" fxFlex (selectionChange)="enable($event)">
+                        <mat-option *ngFor="let master of TopMasters" [value]="master.MasterDataId">
+                            {{master.MasterDataName}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field fxFlex appearance="outline">
+                    <mat-label>Organization</mat-label>
+                    <mat-select formControlName="OrgId" fxFlex>
+                        <mat-option *ngFor="let master of Organizations" [value]="master.OrganizationId">
+                            {{master.OrganizationName}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <button [disabled]="loading" matTooltip="search" class="mat-raised-button" (click)="GetSearchMaster()"
+                    fxFlex="10">
+                    <mat-icon>search</mat-icon>
+                </button>
+                <div fxFlex>&nbsp;</div>
+            </div>
+        </form>
+        <div>
+            <mat-divider></mat-divider>
+            <mat-table [dataSource]="datasource" matSort>
+                <ng-container matColumnDef="MasterDataName">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        <mat-form-field [style.width.pc]="10">
+                            <input matInput [value]="element.MasterDataName" [(ngModel)]="element.MasterDataName"
+                                autocomplete="Off" placeholder="" (blur)="onBlur(element)" [minlength]="1"
+                                [maxlength]="50">
                         </mat-form-field>
-                        <mat-form-field fxFlex appearance="outline">
-                            <mat-label>Master Name</mat-label>
-                            <mat-select formControlName="ParentId" fxFlex (selectionChange)="enable($event)">
-                                <mat-option *ngFor="let master of TopMasters" [value]="master.MasterDataId">
-                                    {{master.MasterDataName}}
-                                </mat-option>
-                            </mat-select>
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="Logic">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> Logic </mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        <mat-form-field [style.width.pc]="20">
+                            <textarea matInput [value]="element.Logic" [(ngModel)]="element.Logic" autocomplete="Off"
+                                (blur)="onBlur(element)" [maxlength]="256"></textarea>
                         </mat-form-field>
-                        <mat-form-field fxFlex appearance="outline">
-                            <mat-label>Organization</mat-label>
-                            <mat-select formControlName="OrgId" fxFlex>
-                                <mat-option *ngFor="let master of Organizations" [value]="master.OrganizationId">
-                                    {{master.OrganizationName}}
-                                </mat-option>
-                            </mat-select>
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="Sequence">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> Sequence </mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        <mat-form-field [style.width.px]="50">
+                            <input type="number" matInput [value]="element.Sequence" [(ngModel)]="element.Sequence"
+                                autocomplete="Off" (blur)="ReSequence(element)" [max]="100">
                         </mat-form-field>
-                        <button [disabled]="loading" matTooltip="search" class="mat-raised-button"
-                            (click)="GetSearchMaster()" fxFlex="10">
-                            <mat-icon>search</mat-icon>
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="Description">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> Description </mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        <mat-form-field [style.width.pc]="25">
+                            <textarea matInput [value]="element.Description" [(ngModel)]="element.Description"
+                                autocomplete="Off" (blur)="onBlur(element)" [maxlength]="2000"></textarea>
+                        </mat-form-field>
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="Active">
+                    <mat-header-cell *matHeaderCellDef style="justify-content: center;">
+                        <button style="margin-right: 15px;" [disabled]="loading" matTooltip="new item"
+                            *ngIf="enableAddNew" class="mat-raised-button" (click)="AddData()" fxFlex="10">
+                            <mat-icon>add</mat-icon>
                         </button>
-                        <div fxFlex>&nbsp;</div>
-                    </div>
-                </form>
-                <div>
-                    <mat-divider></mat-divider>
-                    <mat-table [dataSource]="datasource" matSort>
-                        <ng-container matColumnDef="MasterDataName">
-                            <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
-                            <mat-cell *matCellDef="let element">
-                                <mat-form-field [style.width.pc]="10">
-                                    <input matInput [value]="element.MasterDataName"
-                                        [(ngModel)]="element.MasterDataName" autocomplete="Off" placeholder=""
-                                        (blur)="onBlur(element)" [minlength]="1" [maxlength]="50">
-                                </mat-form-field>
-                            </mat-cell>
-                        </ng-container>
-                        <ng-container matColumnDef="Logic">
-                            <mat-header-cell *matHeaderCellDef mat-sort-header> Logic </mat-header-cell>
-                            <mat-cell *matCellDef="let element">
-                                <mat-form-field [style.width.pc]="20">
-                                    <textarea matInput [value]="element.Logic" [(ngModel)]="element.Logic"
-                                        autocomplete="Off" (blur)="onBlur(element)" [maxlength]="256"></textarea>
-                                </mat-form-field>
-                            </mat-cell>
-                        </ng-container>
-                        <ng-container matColumnDef="Sequence">
-                            <mat-header-cell *matHeaderCellDef mat-sort-header> Sequence </mat-header-cell>
-                            <mat-cell *matCellDef="let element">
-                                <mat-form-field [style.width.px]="50">
-                                    <input type="number" matInput [value]="element.Sequence"
-                                        [(ngModel)]="element.Sequence" autocomplete="Off" (blur)="ReSequence(element)"
-                                        [max]="100">
-                                </mat-form-field>
-                            </mat-cell>
-                        </ng-container>
-                        <ng-container matColumnDef="Description">
-                            <mat-header-cell *matHeaderCellDef mat-sort-header> Description </mat-header-cell>
-                            <mat-cell *matCellDef="let element">
-                                <mat-form-field [style.width.pc]="25">
-                                    <textarea matInput [value]="element.Description" [(ngModel)]="element.Description"
-                                        autocomplete="Off" (blur)="onBlur(element)" [maxlength]="2000"></textarea>
-                                </mat-form-field>
-                            </mat-cell>
-                        </ng-container>
-                        <ng-container matColumnDef="Active">
-                            <mat-header-cell *matHeaderCellDef style="justify-content: center;">
-                                <button style="margin-right: 15px;" [disabled]="loading" matTooltip="new item" *ngIf="enableAddNew"
-                                    class="mat-raised-button" (click)="AddData()" fxFlex="10">
-                                    <mat-icon>add</mat-icon>
-                                </button>
-                                <button [disabled]="loading" matTooltip="save all"
-                                    class="mat-raised-button" (click)="SaveAll()" fxFlex="10">
-                                    <mat-icon>all_out</mat-icon>
-                                </button>
-                            </mat-header-cell>
-                            <mat-cell *matCellDef="let element">
-                                <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
-                                    [checked]="element.Active">
-                                </mat-checkbox>&nbsp;
-                                <button [disabled]="loading || !element.Action" matTooltip="view/edit" mat-mini-fab
-                                    (click)="UpdateOrSave(element)">
-                                    <mat-icon>save</mat-icon>
-                                </button>
-                            </mat-cell>
-                        </ng-container>
+                        <button [disabled]="loading" matTooltip="save all" class="mat-raised-button" (click)="SaveAll()"
+                            fxFlex="10">
+                            <mat-icon>all_out</mat-icon>
+                        </button>
+                    </mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
+                            [checked]="element.Active">
+                        </mat-checkbox>&nbsp;
+                        <button [disabled]="loading || !element.Action" matTooltip="view/edit" mat-mini-fab
+                            (click)="UpdateOrSave(element)">
+                            <mat-icon>save</mat-icon>
+                        </button>
+                    </mat-cell>
+                </ng-container>
 
-                        <mat-header-row *matHeaderRowDef="DisplayColumns"></mat-header-row>
-                        <mat-row *matRowDef="let row; columns: DisplayColumns;" fxLayoutAlign="space-between center"
-                            fxLayout="row">
-                        </mat-row>
-                    </mat-table>
-                    <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>
-                </div>
+                <mat-header-row *matHeaderRowDef="DisplayColumns"></mat-header-row>
+                <mat-row *matRowDef="let row; columns: DisplayColumns;" fxLayoutAlign="space-between center"
+                    fxLayout="row">
+                </mat-row>
+            </mat-table>
+            <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>
+        </div>
     </div>
     <div>
-        
+
         <div fxLayoutGap="30px" fxLayout="row wrap" fxLayoutAlign="space-around center" class="boxes">
-            <strong>Below variable name can be added in certificate definition.</strong>    
+            <strong>Below variable name can be added in certificate definition.</strong>
             <div *ngFor="let item of StudentVariableNames">
                 {{item}}
             </div>
