--- a/src/app/modules/student/studentfeepayment/feereceipt/feereceipt.component.html
+++ b/src/app/modules/student/studentfeepayment/feereceipt/feereceipt.component.html
@@ -14,24 +14,24 @@
             </button>
         </div> -->
         <div>
-            <mat-table [dataSource]="dataReceiptSource">
+            <mat-table [dataSource]="dataReceiptSource" matSort>
                 <ng-container matColumnDef="TotalAmount">
-                    <mat-header-cell *matHeaderCellDef> Amount </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> Amount </mat-header-cell>
                     <mat-cell style="text-align: right;" *matCellDef="let element">
                         {{element.TotalAmount}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="ReceiptDate">
-                    <mat-header-cell *matHeaderCellDef> Receipt Date </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> Receipt Date </mat-header-cell>
                     <mat-cell *matCellDef="let element"> {{element.ReceiptDate|date:'dd/MM/yyyy'}} </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="Active">
-                    <mat-header-cell *matHeaderCellDef> Status </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> Status </mat-header-cell>
                     <mat-cell *matCellDef="let element"><a style="cursor:pointer; color: blue;" (click)="viewDetail(element)">
                             {{element.Active==0?'Canceled':'Active'}}</a></mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="ReceiptNo">
-                    <mat-header-cell *matHeaderCellDef> Receipt No. </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> Receipt No. </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                             {{element.ReceiptNo}}</mat-cell>
                 </ng-container>
@@ -113,10 +113,10 @@
                         class="mat-raised-button">
                         <mat-icon>cancel</mat-icon>
                     </button>
-                    <button [disabled]="loading" matTooltip="done" (click)="done()"
+                    <!-- <button [disabled]="loading" matTooltip="done" (click)="done()"
                         class="mat-raised-button">
                         <mat-icon>checked</mat-icon>
-                    </button>
+                    </button> -->
                     <button [disabled]="loading" matTooltip="print" printSectionId="printSection"
                         [useExistingCss]="true" ngxPrint class="mat-raised-button">
                         <mat-icon>print</mat-icon>
