--- a/src/app/modules/attendance/studentattendance/studentattendance.component.html
+++ b/src/app/modules/attendance/studentattendance/studentattendance.component.html
@@ -29,7 +29,7 @@
             </mat-form-field>
              <mat-form-field appearance="outline">
                 <mat-label>Attendance Date</mat-label>
-                <input [disabled]="true" formControlName="searchAttendanceDate" matInput [matDatepicker]="AttendanceDate" autocomplete="off">
+                <input formControlName="searchAttendanceDate" matInput [matDatepicker]="AttendanceDate" autocomplete="off">
                 <mat-datepicker-toggle matSuffix [for]="AttendanceDate"></mat-datepicker-toggle>
                 <mat-datepicker #AttendanceDate></mat-datepicker>
             </mat-form-field> 
