--- a/src/app/modules/schoolreports/reportboard/reportboard.component.html
+++ b/src/app/modules/schoolreports/reportboard/reportboard.component.html
@@ -19,19 +19,19 @@
                 </mat-tab>
                 <mat-tab>
                     <ng-template mat-tab-label>
-                        <mat-icon>info</mat-icon>fee collection report
+                        <mat-icon>info</mat-icon>Fee Payment Report
                     </ng-template>
                     <app-feecollectionreport></app-feecollectionreport>
                 </mat-tab>
                 <mat-tab>
                     <ng-template mat-tab-label>
-                        <mat-icon>info</mat-icon>Today's Collection
+                        <mat-icon>info</mat-icon>Date Wise Collection
                     </ng-template>
                     <app-today-collection></app-today-collection>
                 </mat-tab>
                 <mat-tab>
                     <ng-template mat-tab-label>
-                        <mat-icon>info</mat-icon>Certificates
+                        <mat-icon>info</mat-icon>Issue Certificates
                     </ng-template>
                     <app-certificates></app-certificates>
                 </mat-tab>
